package org.example;

public class PastryNotFoundException extends Exception{
    public PastryNotFoundException(String message) {
        super(message);
    }


}
