package org.example;

public interface PreparationStatus {

    PreparationStatusEnum getPreparationStatus();
    void updatePreparationStatus(PreparationStatusEnum status);

}
