package org.example;

public enum PreparationStatusEnum {
    NOT_STARTED, IN_PROGRESS, READY, COMPLETED
}

